added settings data activity view

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -46,7 +46,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".view.setting.ChangePasswordActivity">
+            tools:context=".view.settings.account.ChangePasswordActivity">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edt_old_password"
@@ -67,7 +67,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="@string/old_password"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:background="@color/lightest_neutral"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -89,7 +92,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="@string/new_password"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:background="@color/lightest_neutral"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -111,7 +117,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="@string/retype_new_password"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:background="@color/lightest_neutral"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"/>
 
             </com.google.android.material.textfield.TextInputLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
