--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -71,7 +71,10 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:hint="@string/phone_number"
-            android:inputType="phone" />
+            android:inputType="phone"
+            android:background="@color/lightest_neutral"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
