--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -29,9 +29,9 @@
         android:id="@+id/textView4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="24dp"
         android:fontFamily="@font/ibm_plex_sans_semi_bold"
         android:text="@string/otp_verification"
         android:textAlignment="center"
@@ -54,33 +54,37 @@
         app:layout_constraintStart_toStartOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <byc.avt.avanteeborrower.helper.widget.PinViewEditText
+    <com.mukesh.OtpView
         android:id="@+id/edt_otp_code"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="40dp"
+        android:clickable="true"
         android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:fontFamily="@font/ibm_plex_sans_semi_bold"
+        android:gravity="center"
         android:inputType="number"
-        android:textSize="30sp"
-        app:cursorVisible="true"
-        app:forceKeyboard="false"
-        app:hint="0"
+        android:textAlignment="center"
+        android:textSize="28sp"
+        app:itemCount="6"
+        app:itemSpacing="12dp"
+        app:itemWidth="34dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_otp_sent_to"
-        app:pinBackground="@drawable/bg_white_rounded_border_grey_6"
-        app:pinHeight="45dp"
-        app:pinLength="6"
-        app:pinWidth="42dp"
-        app:splitWidth="@dimen/dimen_16" />
+        app:lineColor="@color/dark"
+        app:viewType="line" />
 
     <TextView
         android:id="@+id/tv_countdown"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="24dp"
         android:fontFamily="@font/ibm_plex_sans"
         android:text="@string/resend_in"
         android:textAlignment="center"
