--- a/app/src/main/res/layout/item_onboarding.xml
+++ b/app/src/main/res/layout/item_onboarding.xml
@@ -87,7 +87,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
-        android:text="@string/register"
+        android:text="@string/register_onboard"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:focusable="true"
