--- a/app/src/main/res/layout/activity_kuta_application.xml
+++ b/app/src/main/res/layout/activity_kuta_application.xml
@@ -48,7 +48,7 @@
         android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <fragment
+        <androidx.fragment.app.FragmentContainerView
             android:id="@+id/kuta_loan_form_fragment_container"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
