--- a/app/src/main/res/layout/fragment_kta_loan_document.xml
+++ b/app/src/main/res/layout/fragment_kta_loan_document.xml
@@ -1,14 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.loanApplication.KTA.form.KTALoanDocumentFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!--TODO: CardView Take Bank Book -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_take_bank_book_fr_kta_loan_document"
+                android:layout_width="match_parent"
+                android:layout_height="64dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:foreground="@drawable/selectable_square"
+                app:cardBackgroundColor="@color/lightest_neutral"
+                app:cardCornerRadius="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/cons_cv_take_bank_book_fr_kta_loan_document"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/img_take_bank_book_fr_kta_loan_document"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:contentDescription="@string/img"
+                        android:src="@drawable/ic_take_picture"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/txt_take_bank_book_fr_kta_loan_document"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="8dp"
+                        android:ellipsize="none"
+                        android:scrollHorizontally="false"
+                        android:maxLines="2"
+                        android:text="@string/take_photo_of_account_book"
+                        android:textColor="@color/darkO05"
+                        android:textSize="16sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/img_take_bank_book_fr_kta_loan_document"
+                        app:layout_constraintEnd_toStartOf="@+id/img_info_take_bank_book_fr_kta_loan_document"
+                        app:layout_constraintStart_toEndOf="@+id/img_take_bank_book_fr_kta_loan_document"
+                        app:layout_constraintTop_toTopOf="@+id/img_take_bank_book_fr_kta_loan_document" />
+
+                    <ImageView
+                        android:id="@+id/img_info_take_bank_book_fr_kta_loan_document"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="16dp"
+                        android:contentDescription="@string/img"
+                        android:foreground="@drawable/selectable_curve"
+                        android:src="@drawable/ic_info_circle"
+                        android:visibility="visible"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/img_cancel_take_bank_book_fr_kta_loan_document"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="16dp"
+                        android:contentDescription="@string/img"
+                        android:foreground="@drawable/selectable_curve"
+                        android:src="@drawable/ic_cancel_24px"
+                        android:visibility="gone"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+            <!--TODO: CardView Taken Bank Book Preview -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_img_bank_book_fr_kta_loan_document"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="32dp"
+                app:cardBackgroundColor="@color/dark"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cv_take_bank_book_fr_kta_loan_document">
+
+                <Button
+                    android:id="@+id/btn_bank_book_fr_kta_loan_document"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_gravity="top|end"
+                    android:background="@android:color/transparent"
+                    android:elevation="0dp"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    app:icon="@drawable/ic_baseline_rotate_right_dark_24"
+                    app:iconGravity="textStart"
+                    app:iconTint="@android:color/white" />
+
+                <ImageView
+                    android:id="@+id/img_bank_book_fr_kta_loan_document"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginBottom="24dp"
+                    android:contentDescription="@string/img"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/ic_baseline_no_photography_24" />
+            </androidx.cardview.widget.CardView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+    <Button
+        android:id="@+id/btn_next_kta_document"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="148dp"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom|end"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/button_state_selector"
+        android:enabled="true"
+        android:text="@string/next"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="16sp" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
