--- a/app/src/main/res/layout/layout_loan_types.xml
+++ b/app/src/main/res/layout/layout_loan_types.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv_loan_types"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -15,9 +14,13 @@
             android:id="@+id/cv_staff_loan"
             android:layout_width="match_parent"
             android:layout_height="64dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:focusable="true"
+            android:clickable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            >
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -98,6 +101,9 @@
             android:id="@+id/cv_kta_loan"
             android:layout_width="match_parent"
             android:layout_height="64dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:focusable="true"
+            android:clickable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cv_staff_loan">
@@ -181,6 +187,9 @@
             android:id="@+id/cv_kuta_loan"
             android:layout_width="match_parent"
             android:layout_height="64dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:focusable="true"
+            android:clickable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cv_kta_loan">
