--- a/app/src/main/res/navigation/staff_loan_request_navigation.xml
+++ b/app/src/main/res/navigation/staff_loan_request_navigation.xml
@@ -9,27 +9,47 @@
         android:id="@+id/staffLoanCompanyDataFragment"
         android:name="byc.avt.avanteeborrower.view.loanApplication.staff.form.StaffLoanCompanyDataFragment"
         android:label="@string/company_data"
-        tools:layout="@layout/fragment_staff_loan_company_data" />
+        tools:layout="@layout/fragment_staff_loan_company_data" >
+        <action
+            android:id="@+id/action_staffLoanCompanyDataFragment_to_staffLoanPersonalDataFragment"
+            app:destination="@id/staffLoanPersonalDataFragment" />
+    </fragment>
     <fragment
         android:id="@+id/staffLoanPersonalDataFragment"
         android:name="byc.avt.avanteeborrower.view.loanApplication.staff.form.StaffLoanPersonalDataFragment"
         android:label="@string/personal_data"
-        tools:layout="@layout/fragment_staff_loan_personal_data" />
+        tools:layout="@layout/fragment_staff_loan_personal_data" >
+        <action
+            android:id="@+id/action_staffLoanPersonalDataFragment_to_staffLoanPurposeFragment"
+            app:destination="@id/staffLoanPurposeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/staffLoanPurposeFragment"
         android:name="byc.avt.avanteeborrower.view.loanApplication.staff.form.StaffLoanPurposeFragment"
         android:label="@string/loan_purpose"
-        tools:layout="@layout/fragment_staff_loan_purpose" />
+        tools:layout="@layout/fragment_staff_loan_purpose" >
+        <action
+            android:id="@+id/action_staffLoanPurposeFragment_to_staffLoanDocumentFragment"
+            app:destination="@id/staffLoanDocumentFragment" />
+    </fragment>
     <fragment
         android:id="@+id/staffLoanDocumentFragment"
         android:name="byc.avt.avanteeborrower.view.loanApplication.staff.form.StaffLoanDocumentFragment"
         android:label="@string/essential_document"
-        tools:layout="@layout/fragment_staff_loan_document" />
+        tools:layout="@layout/fragment_staff_loan_document" >
+        <action
+            android:id="@+id/action_staffLoanDocumentFragment_to_staffLoanApplicationFragment"
+            app:destination="@id/staffLoanApplicationFragment" />
+    </fragment>
     <fragment
         android:id="@+id/staffLoanApplicationFragment"
         android:name="byc.avt.avanteeborrower.view.loanApplication.staff.form.StaffLoanApplicationFragment"
         android:label="@string/loan_application"
-        tools:layout="@layout/fragment_staff_loan_application" />
+        tools:layout="@layout/fragment_staff_loan_application" >
+        <action
+            android:id="@+id/action_staffLoanApplicationFragment_to_staffLoanConfirmationFragment"
+            app:destination="@id/staffLoanConfirmationFragment" />
+    </fragment>
     <fragment
         android:id="@+id/staffLoanConfirmationFragment"
         android:name="byc.avt.avanteeborrower.view.loanApplication.staff.form.StaffLoanConfirmationFragment"
