--- a/app/src/main/res/layout/fragment_bank_info.xml
+++ b/app/src/main/res/layout/fragment_bank_info.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.registration.forms.BankInfoFragment">
+    tools:context=".view.registration.form.BankInfoFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
