--- a/app/src/main/res/layout/fragment_personal_data.xml
+++ b/app/src/main/res/layout/fragment_personal_data.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.registration.forms.PersonalDataFragment">
+    tools:context=".view.registration.form.PersonalDataFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
