--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.registration.forms.WelcomeFragment">
+    tools:context=".view.registration.form.WelcomeFragment">
 
     <ImageView
         android:id="@+id/iv_welcome_fragment_register"
